# side-loading

./: .gitignore  README.md  side-loading.cabal  zeppelin.cabal
src/Data/: SideLoaded.hs  Zeppelin.hs
src/Data/Zeppelin/: Internal.hs  Swagger.hs
test/Data/: SideLoadingSpec.hs
