name:                zeppelin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/zeppelin#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Allen
copyright:           2017 Martin Allen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.SideLoaded
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , singletons
                     , text
  default-language:    Haskell2010

test-suite side-loading-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , aeson
                     , side-loading
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/zeppelin
